Compilation_Racket_Mips/piton/tests/errors/no_body_if.py
if True:
print_int(1)
